hphp/test/zend/bad/ext/mbstring/tests/zend_multibyte-01.php
<?php
	function —\Ž\”\($ˆø”)
	{
		echo $ˆø”;
	}

	—\Ž\”\("ƒhƒŒƒ~ƒtƒ@ƒ\");
?>
